# digitalized

./: .gitignore  README.md  pyproject.toml  tests.py
app_variacao/: exemplo.py
app_variacao/documents/erros/: __init__.py
app_variacao/documents/sheet/: parse.py
app_variacao/documents/sheet/csv/: __init__.py  load.py
app_variacao/documents/sheet/excel/: load.py
app_variacao/documents/sheet/ods/: __init__.py  load.py
app_variacao/io/: __init__.py
app_variacao/types/: core.py
app_variacao/ui/core/: __init__.py
digitalized/: exemplo.py
digitalized/documents/erros/: __init__.py
digitalized/documents/image/: __init__.py  image.py
digitalized/documents/pdf/: __init__.py  image_to_pdf.py  pdf_convert.py  pdf_document.py  pdf_page.py
digitalized/documents/sheet/: __init__.py  parse.py
digitalized/documents/sheet/csv/: load.py
digitalized/documents/sheet/excel/: __init__.py  _col_index.py  load.py
digitalized/documents/sheet/ods/: __init__.py  load.py
digitalized/documents/sheet/types/: __init__.py
digitalized/documents/sheet/xml/: __init__.py
digitalized/ocr/: __init__.py  recognize.py  tesseract.py
digitalized/ocr/error/: __init__.py
digitalized/types/: array.py  core.py
digitalized/ui_core/core/: __init__.py  base_types.py  observer.py
digitalized/util/: __init__.py
documents/erros/: __init__.py
documents/sheet/excel/: load.py  load2.py
scripts/: add_venv.sh  lib_venv.sh  pip-install.sh  pyenv-install.sh  requirements.txt
