[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app_variacao"
version = "0.1.0"
authors = [
  { name="Bruno Chaves"},
]

description = "Variação de Leitura"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "soup_files>=1.4.1",
    "pandas",
]

[tool.setuptools]
packages = [
    "app_variacao",
    "app_variacao.documents",
    "app_variacao.documents.erros",
    "app_variacao.documents.sheet.csv",
    "app_variacao.documents.sheet.excel",
    "app_variacao.documents.sheet.ods",
    "app_variacao.documents.sheet.types",
    "app_variacao.documents.sheet.xml",
    "app_variacao.io",
    "app_variacao.types",
    "app_variacao.util",
    "app_variacao.ui",
    "app_variacao.ui.core",
]
