[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app_variacao"
version = "0.1.0"
authors = [
  { name="Bruno Chaves"},
]

description = "Variação de Leitura"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "soup_files>=1.4.1",
    "pandas",
]

[tool.setuptools]
packages = [
    "digitalized",
    "digitalized.documents",
    "digitalized.documents.erros",
    "digitalized.documents.sheet.csv",
    "digitalized.documents.sheet.excel",
    "digitalized.documents.sheet.ods",
    "digitalized.documents.sheet.types",
    "digitalized.documents.sheet.xml",
    "digitalized.documents.image",
    "digitalized.documents.pdf",
    "digitalized.ocr",
    "digitalized.ocr.error",
    "digitalized.io",
    "digitalized.types",
    "digitalized.util",
    "digitalized.ui_core",
    "app_variacao.ui_core.core",
]
